# infobip-api-python-sdk

./: .cspell.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  client.py  requirements.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  python-app.yml  python-package.yml  typos.yml
api/: mms.py  sms.py
channels/whatsapp/: client.py
infobip/: client.py  sync_client.py
infobip/api/: mms.py  sms.py
infobip/models/: __init__.py  application.py  channel.py  entity.py  message_error.py  message_price.py  message_status.py  mms_advanced_message.py  mms_delivery_day.py  (+135 more)
infobip_channels/: __init__.py  http_client.py
models/: __init__.py  channel.py  message_price.py  mms_advanced_message.py  mms_advanced_message_segment.py  mms_advanced_request.py  mms_delivery_time.py  mms_delivery_time_window.py  mms_destination.py  mms_inbound_report.py  mms_inbound_report_response.py  mms_message_result.py  mms_price.py  mms_report.py  mms_report_response.py  mms_send_result.py  mms_status.py  mms_upload_binary_result.py  mms_webhook_inbound_message_segment.py  mms_webhook_inbound_report.py  mms_webhook_inbound_report_response.py  mms_webhook_outbound_report.py  mms_webhook_outbound_report_response.py  modify_application.py  number_price.py  number_registration_brand.py  number_registration_business_identifier.py  number_registration_campaign.py  number_registration_data_universal_numbering_system_number.py  number_registration_external_ten_dlc_campaign.py  number_registration_global_intermediary_identification_number.py  number_registration_government_brand.py  number_registration_interactive_voice_response_opt_in.py  number_registration_legal_entity_identifier.py  number_registration_non_profit_brand.py  number_registration_opt_ins.py  number_registration_page_response_brand.py  number_registration_page_response_brand_vet.py  number_registration_page_response_campaign.py  number_registration_private_company_brand.py  (+64 more)
requirements/: common.txt  dev.txt
samples/: test_mms_live.py  test_sms_live.py
tests/: common.py  conftest.py  test_audio_message.py  test_buttons_message.py  test_contact_message.py  test_core.py  test_create_template.py  test_document_message.py  test_document_message_send.py  test_image_message.py  test_list_message.py  test_location_message.py  test_mms.py  test_multi_product_message.py  test_product_message.py  test_send_message.py  test_send_message_cases.py  test_sms.py  test_sticker_message.py  test_template_message.py  test_text_message.py  test_text_message_send.py  test_video_message.py
whatsapp/: client.py  utils.py
(+366 files in other folders)
