[metadata]
name = infobip
version = 6.0.0
author = Luka Kilic, Dino Lozina, Erick Corona
author_email = DevRel@infobip.com
description = Python sdk for Infobip's API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = infobip, sdk, channels, sms, whatsapp, email, webrtc, mms, api
url = https://github.com/infobip-community/infobip-api-python-sdk
project_urls =
    Bug Tracker = https://github.com/infobip-community/infobip-api-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pydantic~=1.9.0

[options.packages.find]
where = .
